// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> href 속성이 들어온 경우 anchor 태그를 그려준다 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3rem;
  padding: 0rem 1.5rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 1rem;
  color: #FFF;
  background-color: #424242;
  border: none;
  border-radius: 0.0625rem;
  cursor: pointer;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #F9D14C;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<a
  class="c0"
  color="white.default"
  font-size="16"
  height="48"
  href="test"
  type="button"
/>
`;

exports[`<Button /> 기본적으로 button 태그를 그려준다 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3rem;
  padding: 0rem 1.5rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 1rem;
  color: #FFF;
  background-color: #424242;
  border: none;
  border-radius: 0.0625rem;
  cursor: pointer;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.c0:hover {
  color: #F9D14C;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<button
  class="c0"
  color="white.default"
  font-size="16"
  height="48"
  type="button"
/>
`;

exports[`<Button /> 자식 컴포넌트가 들어온 경우 그려준다 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3rem;
  padding: 0rem 1.5rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 1rem;
  color: #FFF;
  background-color: #424242;
  border: none;
  border-radius: 0.0625rem;
  cursor: pointer;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.c0:hover {
  color: #F9D14C;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<button
  class="c0"
  color="white.default"
  font-size="16"
  height="48"
  type="button"
>
  test
</button>
`;

exports[`<Button /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 3rem;
  padding: 0rem 1.5rem;
  font-family: 'Spoqa Han Sans','Sans-serif','Helvetica Neue','Nanum Gothic';
  font-size: 1rem;
  color: #FFF;
  background-color: #424242;
  border: none;
  border-radius: 0.0625rem;
  cursor: pointer;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.c0:hover {
  color: #F9D14C;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<button
  class="c0"
  color="white.default"
  font-size="16"
  height="48"
  type="button"
/>
`;
